--- a/samuraitravel/src/main/resources/static/css/style.css
+++ b/samuraitravel/src/main/resources/static/css/style.css
@@ -48,6 +48,15 @@ footer {
 	opacity: 0.8;
 }
 
+.samuraitravel-page-link:hover {
+    color: #407784;
+}
+ 
+.samuraitravel-active {
+	background-color: #5196a6 !important;
+    border-color: #5196a6 !important;
+}
+
 @media screen and (min-width: 1400px) {
 	.samuraitravel-container {
 		max-width: 1200px;
