--- a/samuraitravel/src/main/resources/templates/admin/houses/index.html
+++ b/samuraitravel/src/main/resources/templates/admin/houses/index.html
@@ -26,19 +26,17 @@
 					<div class="col-xxl-9 col-xl-10 col-lg-11">
 						<h1 class="mb-4 text-center">民宿一覧</h1>
 
-						<div class="d-flex justify-content-end">
-							<div class="d-flex justify-content-between align-items-end flex-wrap">
-								<form method="get" th:action="@{/admin/houses}" class="mb-3">
-									<div class="input-group">
-										<input type="text" class="form-control" name="keyword" th:value="${keyword}"
-											placeholder="民宿名" />
-										<button type="submit"
-											class="btn text-white shadow-sm samuraitravel-btn">検索</button>
-									</div>
-								</form>
-							</div>
+						<div class="d-flex justify-content-between align-items-end flex-wrap">
+							<form method="get" th:action="@{/admin/houses}" class="mb-3">
+								<div class="input-group">
+									<input type="text" class="form-control" name="keyword" th:value="${keyword}"
+										placeholder="民宿名" />
+									<button type="submit" class="btn text-white shadow-sm samuraitravel-btn">検索</button>
+								</div>
+							</form>
 
-							<a href="#" class="btn text-white shadow-sm mb-3 samuraitravel-btn">登録</a>
+							<a th:href="@{/admin/houses/register}"
+								class="btn text-white shadow-sm mb-3 samuraitravel-btn">登録</a>
 						</div>
 
 						<table class="table">
