--- a/samuraitravel/src/main/resources/templates/auth/login.html
+++ b/samuraitravel/src/main/resources/templates/auth/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org">
+<html xmlns:th="https://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
 	<div th:replace="~{fragment :: meta}"></div>
@@ -25,6 +25,8 @@
 						</div>
 
 						<form th:action="@{/login}" method="post">
+							<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+
 							<div class="form-group mb-3">
 								<input type="text" class="form-control" name="username" autocomplete="email"
 									placeholder="メールアドレス" autofocus>
