--- a/samuraitravel/src/main/resources/templates/fragment.html
+++ b/samuraitravel/src/main/resources/templates/fragment.html
@@ -41,10 +41,13 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav ms-auto">
-						
+
 						<!-- 未ログインであれば表示する -->
 						<li class="nav-item" sec:authorize="isAnonymous()">
 							<a class="nav-link" th:href="@{/login}">ログイン</a>
+						</li>
+						<li class="nav-item" sec:authorize="isAnonymous()">
+							<a class="nav-link" th:href="@{/signup}">会員登録</a>
 						</li>
 
 						<!-- ログイン済みであれば表示する -->
