--- a/samuraitravel/src/main/resources/templates/auth/login.html
+++ b/samuraitravel/src/main/resources/templates/auth/login.html
@@ -25,7 +25,7 @@
 						</div>
 
 						<form th:action="@{/login}" method="post">
-							<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+							<!--input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /-->
 
 							<div class="form-group mb-3">
 								<input type="text" class="form-control" name="username" autocomplete="email"
