hotelulu_01_22_会員登録機能を作成しよう#2

--- a/samuraitravel/src/main/resources/templates/auth/signup.html
+++ b/samuraitravel/src/main/resources/templates/auth/signup.html
@@ -36,7 +36,7 @@
 									<div th:if="${#fields.hasErrors('name')}" class="text-danger small mb-2"
 										th:errors="*{name}"></div>
 									<input type="text" class="form-control" th:field="*{name}" autocomplete="name"
-										autofocus placeholder="samurai 太郎">
+										autofocus placeholder="侍 太郎">
 								</div>
 							</div>
 
@@ -53,7 +53,7 @@
 									<div th:if="${#fields.hasErrors('furigana')}" class="text-danger small mb-2"
 										th:errors="*{furigana}"></div>
 									<input type="text" class="form-control" th:field="*{furigana}"
-										placeholder="モート タロウ">
+										placeholder="サムライ タロウ">
 								</div>
 							</div>
 
