--- a/samuraitravel/src/main/resources/templates/index.html
+++ b/samuraitravel/src/main/resources/templates/index.html
@@ -24,6 +24,10 @@
 				<div th:if="${param.loggedOut}" class="alert alert-info">
 					ログアウトしました。
 				</div>
+				
+				<div th:if="${successMessage}" class="alert alet-info">
+					<span th:text="${successMessage}"></span>
+				</div>
 			</div>
 		</main>
 
