hotelulu_01_24_メール認証機能を作成しよう#2

--- a/samuraitravel/src/main/resources/templates/index.html
+++ b/samuraitravel/src/main/resources/templates/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-	<p>Hello, world!</p>
 	<div class="samuraitravel-wrapper">
 		<!-- ヘッダー -->
 		<div th:replace="~{fragment :: header}"></div>
@@ -25,7 +24,7 @@
 					ログアウトしました。
 				</div>
 				
-				<div th:if="${successMessage}" class="alert alet-info">
+				<div th:if="${successMessage}" class="alert alert-info">
 					<span th:text="${successMessage}"></span>
 				</div>
 			</div>
