--- a/samuraitravel/src/main/resources/templates/fragment.html
+++ b/samuraitravel/src/main/resources/templates/fragment.html
@@ -39,9 +39,9 @@
 					aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
+				
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav ms-auto">
-
 						<!-- 未ログインであれば表示する -->
 						<li class="nav-item" sec:authorize="isAnonymous()">
 							<a class="nav-link" th:href="@{/login}">ログイン</a>
@@ -58,6 +58,10 @@
 							</a>
 
 							<div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownGeneral">
+								<a class="dropdown-item samuraitravel-dropdown-item" th:href="@{/user}">会員情報</a>
+								
+								<div class="dropdown-driver"></div>
+								
 								<a class="dropdown-item samuraitravel-dropdown-item" th:href="@{/logout}"
 									onclick="event.preventDefault(); document.getElementById('logout-form').submit();">
 									ログアウト
