--- a/samuraitravel/src/main/resources/templates/fragment.html
+++ b/samuraitravel/src/main/resources/templates/fragment.html
@@ -60,7 +60,7 @@
 							<div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownGeneral">
 								<a class="dropdown-item samuraitravel-dropdown-item" th:href="@{/user}">会員情報</a>
 								
-								<div class="dropdown-driver"></div>
+								<div class="dropdown-divider"></div>
 								
 								<a class="dropdown-item samuraitravel-dropdown-item" th:href="@{/logout}"
 									onclick="event.preventDefault(); document.getElementById('logout-form').submit();">
@@ -78,7 +78,8 @@
 							</a>
 
 							<div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownAdmin">
-								<a class="dropdown-item samuraitravel-dropdown-item" th:href="@{/admin/houses}">民宿一覧</a>
+								<a class="dropdown-item samuraitravel-dropdown-item" th:href="@{/admin/users}">会員一覧</a>
+ 								<a class="dropdown-item samuraitravel-dropdown-item" th:href="@{/admin/houses}">民宿一覧</a>
 
 								<div class="dropdown-divider"></div>
 
