--- a/samuraitravel/src/main/resources/static/css/style.css
+++ b/samuraitravel/src/main/resources/static/css/style.css
@@ -10,6 +10,10 @@ h1 {
 	font-size: 1.5rem;
 }
 
+h3 {
+	font-size: 1.25rem;
+}
+
 a {
 	color: #5196a6;
 	text-decoration: none !important;
@@ -81,6 +85,20 @@ footer {
 
 .samuraitravel-dropdown-item:active {
 	background-color: #5196a6;
+}
+
+.samuraitravel-card-liink {
+	transition: 0.3s;
+}
+
+.sameuraitravel-card-link:hover {
+	opacity: 0.7;
+}
+
+.samuraitravel-horizontal-card-image {
+	width: 100%;
+	height: 240px;
+	object-fit: cover;	
 }
 
 @media screen and (min-width: 1400px) {
